# glab-discussion

./: .gitignore  README.md  pyproject.toml  ruff.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
coding-agent-plugins/claude-code/.claude-plugin/: plugin.json
coding-agent-plugins/claude-code/skills/glab-discussion/: SKILL.md
src/glab_discussion/: __main__.py  api.py  cli.py  context.py  formatter.py  models.py  sanitize.py  terminal.py  users.py
src/glab_discussion/commands/: delete.py  diff.py  edit.py  read.py  resolve.py  write.py
tests/: conftest.py  test_cli.py  test_context.py  test_delete.py  test_diff.py  test_edit.py  test_formatter.py  test_models.py  test_terminal.py
