[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "glab-discussion"
dynamic = ["version"]
description = "CLI wrapper around GitLab Discussions REST API for listing, creating, and managing MR discussions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Filip Procházka", email = "dev@fprochazka.cz"}
]
keywords = ["gitlab", "discussions", "merge-request", "cli", "code-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
glab-discussion = "glab_discussion.cli:main"

[project.urls]
Homepage = "https://github.com/fprochazka/glab-discussion"
Repository = "https://github.com/fprochazka/glab-discussion"
Issues = "https://github.com/fprochazka/glab-discussion/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/glab_discussion"]
